--- a/DayFinder/View/Base.lproj/Main.storyboard
+++ b/DayFinder/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bGX-Hb-PAL">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,17 +13,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DayFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="day" translatesAutoresizingMaskIntoConstraints="NO" id="K7k-0s-2GO">
-                                <rect key="frame" x="-9" y="-34" width="423" height="770"/>
+                                <rect key="frame" x="-9" y="-46" width="676" height="421"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="F5A-FX-2qJ">
-                                <rect key="frame" x="20" y="74" width="374" height="360"/>
+                                <rect key="frame" x="20" y="52" width="627" height="360"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="Zgw-x6-qEw">
-                                        <rect key="frame" x="29.666666666666657" y="0.0" width="315" height="231"/>
+                                        <rect key="frame" x="156" y="0.0" width="315" height="231"/>
                                         <subviews>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check Your Day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="va4-Sa-VsW">
                                                 <rect key="frame" x="0.0" y="0.0" width="315" height="50"/>
@@ -52,7 +52,9 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="70" height="34"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="34" id="K6C-NB-n8N"/>
-                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="wSd-L3-YGf"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="wSd-L3-YGf">
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="70"/>
+                                                                    </constraint>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
@@ -88,7 +90,10 @@
                                                                 <color key="backgroundColor" systemColor="placeholderTextColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="34" id="eb6-US-O2U"/>
-                                                                    <constraint firstAttribute="width" constant="230" id="t9W-ew-Y7o"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="t9W-ew-Y7o">
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="32"/>
+                                                                        <variation key="heightClass=regular-widthClass=regular" constant="300"/>
+                                                                    </constraint>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -97,7 +102,9 @@
                                                                 <rect key="frame" x="0.0" y="51" width="230" height="34"/>
                                                                 <color key="backgroundColor" systemColor="placeholderTextColor"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" constant="230" id="I7q-MH-NOU"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="I7q-MH-NOU">
+                                                                        <variation key="heightClass=regular-widthClass=regular" constant="300"/>
+                                                                    </constraint>
                                                                     <constraint firstAttribute="height" constant="34" id="u1u-SB-JNR"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -107,13 +114,19 @@
                                                                 <rect key="frame" x="0.0" y="102" width="230" height="34"/>
                                                                 <color key="backgroundColor" systemColor="placeholderTextColor"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" constant="230" id="Kc1-v8-tYj"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="Kc1-v8-tYj">
+                                                                        <variation key="heightClass=regular-widthClass=regular" constant="300"/>
+                                                                    </constraint>
                                                                     <constraint firstAttribute="height" constant="34" id="Rsd-dd-ljz"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                         </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="136" id="YX3-ix-Xhu"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="pp2-ew-uX1"/>
+                                                        </constraints>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="separatorColor"/>
@@ -124,9 +137,12 @@
                                                 </userDefinedRuntimeAttributes>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="uEY-EA-k6p" firstAttribute="top" relation="greaterThanOrEqual" secondItem="va4-Sa-VsW" secondAttribute="bottom" constant="10" id="0Kz-wZ-SVs"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pEJ-q1-Da5">
-                                        <rect key="frame" x="87" y="239" width="200" height="121"/>
+                                        <rect key="frame" x="213.5" y="239" width="200" height="121"/>
                                         <subviews>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day of the week inside your finder" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jL-x2-NFb">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="70"/>
@@ -183,7 +199,7 @@
                                 <variation key="heightClass=regular-widthClass=regular" constant="20"/>
                             </constraint>
                             <constraint firstItem="K7k-0s-2GO" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ltx-lY-XVe"/>
-                            <constraint firstItem="F5A-FX-2qJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="yxc-yo-zvx">
+                            <constraint firstItem="F5A-FX-2qJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="yxc-yo-zvx">
                                 <variation key="heightClass=regular-widthClass=regular" constant="80"/>
                             </constraint>
                         </constraints>
@@ -214,7 +230,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bGX-Hb-PAL" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackTranslucent" id="H9z-qn-24n">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" systemColor="labelColor"/>
